--- a/body-matter/3r/teoria-de-Galois.tex
+++ b/body-matter/3r/teoria-de-Galois.tex
@@ -62,10 +62,14 @@
 				&=\lambda\ev_{\alpha}(p(x)). \tag{\ref{ex:el morfisme avaluació és un morfisme d'anells}}
 			\end{align*}
 			Ara bé, com que hem suposat que~\(\ker(\ev_{\alpha})=(\lambda p(x))\) tenim~\(\ev_{\alpha}(\lambda p(x))=0\) i, com que hem suposat que~\(\lambda\neq0\), ha de ser~\(\ev_{\alpha}(p(x))=0\), i tenim que
-			\[\ker(\ev_{\alpha})=(p(x)).\]
+			\[
+			    \ker(\ev_{\alpha})=(p(x)).
+			\]
 			
 			Veiem ara que~\(p(x)\) és irreductible. Pel~\myref{thm:Primer Teorema de l'isomorfisme entre anells} trobem que
-			\[\KK[x]/(p(x))=\KK[x]/\ker(\ev_{\alpha})\cong\Ima(\ev_{\alpha}).\]
+			\[
+			    \KK[x]/(p(x))=\KK[x]/\ker(\ev_{\alpha})\cong\Ima(\ev_{\alpha}).
+			\]
 			
 			Com que~\(\FF\) és un cos tenim que~\(\Ima(\ev_{\alpha})\) és un domini. %REF
 			Com que~\(\Ima(\ev_{\alpha})\cong\KK[x]/(p(x))\) és un domini, tenim per la proposició~\myref{prop:R/I domini d'integritat sii I ideal primer} que~\((p(x))\) és un ideal primer, i per l'observació~\myref{obs:ideals primer iff primer} trobem que~\(p(x)\) és primer, i per la proposició~\myref{prop:en un DI un primer és un irreductible} tenim que~\(p(x)\) és irreductible.
@@ -117,7 +121,9 @@
 	\begin{example}
 		\label{ex:el grau de l'extensió d'un cos i el quocient entre el seu anell de polinomis i un polinomi irreductible}
 		Siguin~\(\KK\) un cos i~\(p(x)\in\KK[x]\) un polinomi irreductible. Denotem~\(\FF=\KK[x]/p(x)\). Aleshores
-		\[\grauExtensio{\FF}{\KK}=\grau(p(x)).\]
+		\[
+		    \grauExtensio{\FF}{\KK}=\grau(p(x)).
+		\]
 		\begin{solution}
 			Aquest enunciat té sentit per l'exemple~\myref{ex:el cos de polinomis és una extensió}. %FER
 		\end{solution}
@@ -125,7 +131,9 @@
 	\begin{theorem}[Fórmula de les Torres]
 		\labelname{fórmula de les torres}\label{thm:fórmula de les torres}
 		Siguin~\(\EE\extensio\FF\) i~\(\FF\extensio\KK\) dues extensions de cossos. Aleshores
-		\[\grauExtensio{\EE}{\KK}=\grauExtensio{\EE}{\FF}\grauExtensio{\FF}{\KK}.\]
+		\[
+		    \grauExtensio{\EE}{\KK}=\grauExtensio{\EE}{\FF}\grauExtensio{\FF}{\KK}.
+		\]
 		\begin{proof}
 			Si~\(\grauExtensio{\EE}{\FF}=\infty\) ó~\(\grauExtensio{\FF}{\KK}=\infty\) tenim que~\(\grauExtensio{\EE}{\KK}=\infty\).
 			
@@ -135,13 +143,17 @@
 	\begin{definition}[Torre]
 		\labelname{torre}\label{def:torre de cossos}
 		Siguin~\(\KK_{1}\subseteq\KK_{2}\subseteq\dots\subseteq\KK_{1}\) cossos. Aleshores direm que
-		\[\KK_{1}\subseteq\KK_{2}\subseteq\dots\subseteq\KK_{1}\]
+		\[
+		    \KK_{1}\subseteq\KK_{2}\subseteq\dots\subseteq\KK_{1}
+		\]
 		és una torre.
 	\end{definition}
 	\begin{corollary}
 		\label{cor:fórmula de les torres}
 		Sigui~\(\KK_{1}\subseteq\KK_{2}\subseteq\dots\subseteq\KK_{1}\) una torre. Aleshores
-		\[\grauExtensio{\KK_{n}}{\KK_{1}}=\grauExtensio{\KK_{n}}{\KK_{n-1}}\cdots\grauExtensio{\KK_{2}}{\KK_{1}}\]
+		\[
+		    \grauExtensio{\KK_{n}}{\KK_{1}}=\grauExtensio{\KK_{n}}{\KK_{n-1}}\cdots\grauExtensio{\KK_{2}}{\KK_{1}}
+		\]
 		\begin{proof}
 			Conseqüència de la~\myref{thm:fórmula de les torres}.
 		\end{proof}
@@ -150,7 +162,9 @@
 	\begin{definition}[Mínim subanell engendrat]
 		\labelname{mínim subanell engendrat per un element d'una extensió}\label{def:mínim subanell engendrat per un element d'una extensió}
 		Siguin~\(\FF\extensio\KK\) una extensió i~\(\alpha\in\FF\) un element. Aleshores direm que
-		\[\KK[\alpha]=\{p(\alpha)\in\FF\mid p(x)\in\FF[x]\}\]
+		\[
+		    \KK[\alpha]=\{p(\alpha)\in\FF\mid p(x)\in\FF[x]\}
+		\]
 		és el mínim subanell engendrat per~\(\alpha\) en~\(\FF\extensio\KK\).
 	\end{definition}
 	\begin{observation}
@@ -160,7 +174,9 @@
 	\begin{proposition}
 		\label{prop:el mínim subanell engendrat per un element és l'anell de polinomis quocient l'irreductible de l'element}
 		Siguin~\(\FF\extensio\KK\) una extensió i~\(\alpha\in\FF\) un element. Aleshores
-		\[\KK[\alpha]\cong\KK[x]/(\Irr(\alpha,\KK)).\]
+		\[
+		    \KK[\alpha]\cong\KK[x]/(\Irr(\alpha,\KK)).
+		\]
 		\begin{proof}
 			Tenim que
 			\begin{align*}
@@ -170,7 +186,9 @@
 				&= \KK[\alpha], \tag{\ref{def:mínim subanell engendrat per un element d'una extensió}}
 			\end{align*}
 			i per tant
-			\[\KK[\alpha]\cong\KK[x]/(\Irr(\alpha,\KK)).\qedhere\]
+			\[
+			    \KK[\alpha]\cong\KK[x]/(\Irr(\alpha,\KK)).\qedhere
+			\]
 		\end{proof}
 	\end{proposition}
 	\begin{corollary}
@@ -183,12 +201,16 @@
 	\begin{corollary}
 		\label{cor:el mínim subanell engendrat per un transcendent és isomorfa a l'anell de polinomis}
 		Siguin~\(\FF\extensio\KK\) una extensió i~\(\gamma\in\FF\) un element transcendent sobre~\(\KK\). Aleshores
-		\[\KK[\gamma]\cong\KK[x].\]
+		\[
+		    \KK[\gamma]\cong\KK[x].
+		\]
 	\end{corollary}
 	\begin{definition}[Mínim subcòs engendrat]
 		\labelname{mínim subcòs engendrat per un element d'una extensió}\label{def:mínim subcòs engendrat per un element d'una extensió}
 		Siguin~\(\FF\extensio\KK\) una extensió i~\(\alpha\in\FF\) un element. Aleshores direm que
-		\[\KK(\alpha)=\cosdefraccions(\KK[\alpha])\]
+		\[
+		    \KK(\alpha)=\cosdefraccions(\KK[\alpha])
+		\]
 		és el mínim subcòs engendrat per~\(\alpha\).
 		
 		Aquesta definició té sentit pel Teorema~\myref{thm:cos de fraccions}.
@@ -200,20 +222,30 @@
 	\begin{lemma}
 		\label{lema:un element és algebraic si i només si el mínim subanell engendrat per l'element és un cos}
 		Siguin~\(\FF\extensio\KK\) una extensió i~\(\alpha\in\FF\) un element. Aleshores~\(\alpha\) és algebraic sobre~\(\KK\) si i només si
-		\[\KK(\alpha)=\KK[\alpha].\]
+		\[
+		    \KK(\alpha)=\KK[\alpha].
+		\]
 		\begin{proof} %FER %Revisar
 			Veiem que la condició és suficient~\((\implica)\). Suposem que~\(\alpha\in\FF\) és algebraic sobre~\(\KK\). Per la definició d'\myref{def:element algebraic} trobem que~\(\Irr(\alpha,\KK)\) és un polinomi irreductible no nul, i per la proposició~\myref{prop:un cos quocient un irreductible és un cos} tenim que~\(\KK[\alpha]\) és un cos.
 			
 			Ara bé, pel Teorema~\myref{thm:cos de fraccions} tenim que~\(\KK(\alpha)\subseteq\KK[\alpha]\), però per l'observació~\myref{def:mínim subcòs engendrat per un element d'una extensió} tenim que~\(\KK[\alpha]\subseteq\KK(\alpha)\), i pel \myref{thm:doble inclusió} tenim que~\(\KK(\alpha)=\KK[\alpha]\).
 			
 			Acabem veient que la condició és necessària~\((\implicatper)\). Suposem doncs que
-			\[\KK(\alpha)=\KK[\alpha].\]
+			\[
+			    \KK(\alpha)=\KK[\alpha].
+			\]
 			Per tant~\(\KK[\alpha]\) és un cos, i com que, per l'observació~\myref{obs:l'anell engendrat per alpha està entre l'extensió}, tenim que~\(\alpha\in\KK[\alpha]\), i per la definició de~\myref{def:cos per anells} tenim que~\(-1/\alpha\in\KK[\alpha]\). Aleshores, per la definició d'\myref{def:mínim subanell engendrat per un element d'una extensió} trobem que existeix un polinomi~\(a_{0}+a_{1}x+\dots+a_{k}x^{k}\in\KK[x]\), amb~\(a_{k}\neq0\), tal que
-			\[\frac{-1}{\alpha}=a_{0}+a_{1}\alpha+a_{2}\alpha^{2}+\dots+a_{k}\alpha^{k},\]
+			\[
+			    \frac{-1}{\alpha}=a_{0}+a_{1}\alpha+a_{2}\alpha^{2}+\dots+a_{k}\alpha^{k},
+			\]
 			i per tant
-			\[0=1+a_{0}\alpha+a_{1}\alpha^{2}+\dots+a_{r}\alpha^{r+1},\]
+			\[
+			    0=1+a_{0}\alpha+a_{1}\alpha^{2}+\dots+a_{r}\alpha^{r+1},
+			\]
 			i trobem que~\(\alpha\) és una arrel del polinomi~\(p(x)=1+a_{0}x+a_{1}x^{2}+\dots+a_{r}x^{r+1}\). Aleshores per la definició de~\myref{ex:morfisme d'avaluació} tenim que
-			\[p(x)\in\ker(\ev_{\alpha})\]
+			\[
+			    p(x)\in\ker(\ev_{\alpha})
+			\]
 			i per tant~\(\ker(\ev_{\alpha})\neq(0)\) i pel lema~\myref{lema:element algebraic} trobem que~\(\alpha\) és algebraic.
 		\end{proof}
 	\end{lemma}
@@ -228,7 +260,9 @@
 		\begin{proof}
 			Prenem un element~\(\alpha\in\FF\) i suposem que~\(\grauExtensio{\FF}{\KK}=n\). Per la definició~d'\myref{def:extensió finita} tenim que~\(\dim_{\KK}(\FF)=n\), i per tant els~\(n+1\) elements~\(1,\alpha,\dots,\alpha^{n}\) són~\(\KK\)-linealment independents, %REF
 			i per la definició de~\myref{def:vectors linealment dependents} trobem que existeixen~\(\lambda_{0},\dots,\lambda_{n}\in\KK\) no nuls tals que
-			\[\lambda_{0}+\lambda_{1}\alpha+\dots+\lambda_{n}\alpha^{n}=0,\]
+			\[
+			    \lambda_{0}+\lambda_{1}\alpha+\dots+\lambda_{n}\alpha^{n}=0,
+			\]
 			i per tant trobem que~\(\alpha\) és arrel del polinomi~\(p(x)=\lambda_{0}+\lambda x+\dots+\lambda_{n}x^{n}\in\KK[x]\). Aleshores per la definició~d'\myref{def:element algebraic} trobem que~\(\alpha\in\FF\) és algebraic sobre~\(\KK\) i per la definició~d'\myref{def:extensió algebraica} trobem que l'extensió~\(\FF\extensio\KK\) és algebraica.
 			% Fer per 1,\alpha,\dots,\alpha^{\grau} són \KK-linealment dependents i per tant existeixen \lambda_{i}\in\KK tals que se'n va a la merda.
 		\end{proof}
@@ -248,7 +282,9 @@
 			Veiem ara la implicació~\(\eqref{lema:condicions equivalents a polinomi irreductible:eq2}\implica\eqref{lema:condicions equivalents a polinomi irreductible:eq3}\). Suposem que~\(p(\alpha)=0\) i prenem~\(q(x)\in\KK[x]\) tal que~\(q(\alpha)=0\). Calculem~\(\mcd(p(x),q(x))\). Calculem~\(\mcd(p(x),q(x))\). Si~\(\mcd(p(x),q(x))=p(x)\) aleshores~\(p(x)\divides q(x)\) i tenim el que volíem.
 			
 			Si~\(\mcd(p(x),q(x))\neq p(x)\), com que per la proposició~\myref{prop:en DIP irreductible implica primer} tenim que~\(p(x)\) és primer tenim que~\(\mcd(p(x),q(x))=1\), i per la~\myref{thm:identitat de Bézout} trobem que existeixen~\(r(x)\) i~\(s(x)\) polinomis en~\(\KK[x]\) tals que
-			\[p(x)r(x)+q(x)s(x)=1.\]
+			\[
+			    p(x)r(x)+q(x)s(x)=1.
+			\]
 			Ara bé, tindríem que
 			\[
 				1=p(\alpha)r(\alpha)+q(\alpha)s(\alpha)=0r(\alpha)+0s(\alpha)=0,
@@ -256,13 +292,19 @@
 			i per tant arribem a contradicció i hem acabat.
 			
 			Veiem la implicació~\(\eqref{lema:condicions equivalents a polinomi irreductible:eq3}\implica\eqref{lema:condicions equivalents a polinomi irreductible:eq4}\). Suposem doncs que~\(q(x)\in\KK[x]\) és un polinomi tal que~\(q(\alpha)=0\) i tal que~\(p(x)\divides q(x)\). Tenim que existeix un polinomi~\(d(x)\in\KK[x]\) tal que
-			\[q(x)=p(x)d(x),\]
+			\[
+			    q(x)=p(x)d(x),
+			\]
 			i per tant trobem que~\(\grau(p(x))\leq\grau(q(x))\).
 			
 			Veiem que~\(\eqref{lema:condicions equivalents a polinomi irreductible:eq4}\implica\eqref{lema:condicions equivalents a polinomi irreductible:eq2}\). Suposem doncs que existeix un polinomi~\(q(x)\in\KK[x]\) satisfent~\(q(\alpha)=0\) i~\(\grau(p(x))\leq\grau(q(x))\). Aleshores tenim que existeixen dos polinomis~\(p_{1}(x)\),~\(p_{2}(x)\in\KK[x]\) tals que~\(p(x)=p_{1}(x)p_{2}(x)\), i com que~\(p(\alpha)=0\) trobem que~\(p_{1}(\alpha)=0\) ó~\(p_{2}(\alpha)=0\). Suposem que~\(p_{1}(\alpha)=0\). Per tant tenim que
-			\[\grau(p_{1}(x))\leq\grau(p(x)),\]
+			\[
+			    \grau(p_{1}(x))\leq\grau(p(x)),
+			\]
 			i per hipòtesi
-			\[\grau(p(x))\leq\grau(p_{1}(x)),\]
+			\[
+			    \grau(p(x))\leq\grau(p_{1}(x)),
+			\]
 			i per tant~\(p_{2}(x)\in\KK\).
 			
 			Veiem que~\(\eqref{lema:condicions equivalents a polinomi irreductible:eq3}\implica\eqref{lema:condicions equivalents a polinomi irreductible:eq1}\). Suposem doncs que si existeix un polinomi~\(q(x)\in\KK[x]\) tal que~\(q(\alpha)=0\), aleshores~\(p(x)\divides q(x)\). Considerem~\(\ker(\ev_{\alpha})\). Com que, per hipòtesi, tenim que~\(p(\alpha)=0\), trobem que~\(\ker(\ev_{\alpha})\subseteq(p(x))\). Per altra banda, si~\(\ker(\ev_{\alpha})=(q(x))\) aleshores tenim que~\(q(\alpha)=0\), i per hipòtesi~\(p(x)\divides q(x)\), i per tant~\((p(x))\subseteq(q(x))\) i tenim que~\((p(x))=\ker(\ev_{\alpha})\), i per la definició~d'\myref{def:element algebraic} trobem que~\(p(x)=\Irr(\alpha,\KK)\).
@@ -280,7 +322,9 @@
 		\labelname{el grup de Galois}\label{def:el grup de Galois}
 		\label{def:grup de Galois}
 		Sigui~\(\FF\extensio\KK\) una extensió de cossos. Aleshores definim
-		\[\Gal(\FF\extensio\KK)=\{f\colon\FF\longrightarrow\FF\mid f\text{ és un isomorfisme d'anells i }\left.f\right|_{\KK}=\Id_{\KK}\}\]
+		\[
+		    \Gal(\FF\extensio\KK)=\{f\colon\FF\longrightarrow\FF\mid f\text{ és un isomorfisme d'anells i }\left.f\right|_{\KK}=\Id_{\KK}\}
+		\]
 		com el grup de Galois de l'extensió~\(\FF\extensio\KK\).
 	\end{definition}
 	\begin{proposition}
@@ -308,9 +352,13 @@
 		Siguin~\(\FF\extensio\KK\) una extensió,~\(p(x)\in\KK[x]\) un polinomi i~\(\alpha\in\FF\) una arrel de~\(p(x)\). Aleshores per a tot~\(f\in\Gal(\FF\extensio\KK)\) tenim que~\(f(\alpha)\) és una arrel de~\(p(x)\).
 		\begin{proof}
 			Tenim que existeixen~\(a_{0},\dots,a_{n}\in\KK\) tals que
-			\[p(x)=a_{0}+a_{1}x+\dots+a_{n}x^{n},\]
+			\[
+			    p(x)=a_{0}+a_{1}x+\dots+a_{n}x^{n},
+			\]
 			i tenim que
-			\[0=p(\alpha)=a_{0}+a_{1}\alpha+\dots+a_{n}\alpha^{n}.\]
+			\[
+			    0=p(\alpha)=a_{0}+a_{1}\alpha+\dots+a_{n}\alpha^{n}.
+			\]
 			Aleshores tenim, per la definició de \myref{def:morfisme entre anells}, que
 			\begin{align*}
 				f\Big(\sum_{i=0}^{n}a_{i}\alpha^{i}\Big)&=\sum_{i=0}^{n}f(a_{i}\alpha^{i}) \\
@@ -336,12 +384,16 @@
 	\begin{lemma}
 		\label{lema:primer lema de l'extensió de morfismes}
 		Siguin~\(\FF_{1}\extensio\KK\) i~\(\FF_{2}\extensio\KK\) dues extensions,~\(\alpha\in\FF_{1}\) un element algebraic sobre~\(\KK\) i~\(\beta\in\FF_{2}\) un element. Aleshores existeix un morfisme
-		\[f\colon\KK(\alpha)\longrightarrow\FF_{2}\]
+		\[
+		    f\colon\KK(\alpha)\longrightarrow\FF_{2}
+		\]
 		tal que~\(\left.f\right|_{\KK}=\Id_{\KK}\) i~\(f(\alpha)=\beta\)
 		si i només si~\(\beta\) és una arrel de~\(\Irr(\alpha,\KK)\).
 		\begin{proof}
 			Comencem veient que la condició és suficient~(\(\implica\)). Suposem que existeix un morfisme~\(f\colon\KK(\alpha)\longrightarrow\FF_{2}\) tal que~\(\left.f\right|_{\KK}=\Id_{\KK}\) i~\(f(\alpha)=\beta\). Volem veure que~\(\beta\) és una arrel de~\(\Irr(\alpha,\KK)\). Posem
-			\[\Irr(\alpha,\KK)=a_{0}+a_{1}x+a_{2}x^{2}+\dots+a_{n}x^{n}\]
+			\[
+			    \Irr(\alpha,\KK)=a_{0}+a_{1}x+a_{2}x^{2}+\dots+a_{n}x^{n}
+			\]
 			amb~\(a_{0},\dots,a_{n}\in\KK\) i per la definició de~\myref{def:morfisme entre anells} calculem
 			\begin{align*}
 				a_{0}+a_{1}\beta+\dots+a_{n}\beta^{n}&=a_{0}+a_{1}f(\alpha)+\dots+a_{n}{f(\alpha)}^{n} \\
@@ -388,7 +440,9 @@
 	\begin{lemma}[Extensió de morfismes]
 		\labelname{\empty}\label{lema:extensió de morfismes}
 		Siguin~\(\FF_{1}\extensio\KK\) i~\(\FF_{2}\extensio\KK\) dues extensions,~\(\alpha\in\FF_{1}\) un element algebraic sobre~\(\KK\),~\(\beta\in\FF_{2}\) un element i~\(f\colon\KK\longrightarrow\FF_{2}\) un morfisme. Aleshores existeix un morfisme
-		\[g\colon\KK(\alpha)\longrightarrow\FF_{2}\]
+		\[
+		    g\colon\KK(\alpha)\longrightarrow\FF_{2}
+		\]
 		tal que~\(\left.g\right|_{\KK}=f\) i~\(g(\alpha)=\beta\)
 		si i només si~\(\beta\) és una arrel de~\(\hat{f}(\Irr(\alpha,\KK))\).
 		\begin{proof}
@@ -409,9 +463,13 @@
 		\begin{enumerate}
 		\item L'extensió~\(\FF\extensio\KK\) és finita.
 		\item Existeixen~\(\alpha_{1},\dots,\alpha_{n}\in\KK\) algebraics sobre~\(\KK\) tals que
-		\[\FF=\KK(\alpha_{1},\dots,\alpha_{n}).\]
+		\[
+		    \FF=\KK(\alpha_{1},\dots,\alpha_{n}).
+		\]
 		\item Existeixen~\(\alpha_{1},\dots,\alpha_{n}\in\KK\) tals que~\(\alpha_{i}\) és algebraic sobre~\(\KK(\alpha_{1},\dots,\alpha_{i-1})\) i
-		\[\FF=\KK(\alpha_{1},\dots,\alpha_{n}).\]
+		\[
+		    \FF=\KK(\alpha_{1},\dots,\alpha_{n}).
+		\]
 		\end{enumerate}
 		\begin{proof}
 			%TODO
@@ -437,7 +495,9 @@
 	\begin{corollary}
 		\label{cor:els nombres algebraics són un cos}
 		Sigui~\(\FF\extensio\KK\) una extensió. Aleshores
-		\[\EE=\{\alpha\in\FF\mid\alpha\text{ és algebraic sobre }\KK\}\subseteq\FF\]
+		\[
+		    \EE=\{\alpha\in\FF\mid\alpha\text{ és algebraic sobre }\KK\}\subseteq\FF
+		\]
 		és un cos.
 	\end{corollary}
 \subsection{El cos de descomposició d'una família de polinomis}
@@ -470,7 +530,9 @@
 	\begin{proposition}
 		\label{prop:l'ordre d'un subgrup transitiu divideix n}
 		Sigui~\(G\) un subgrup transitiu de~\(\GrupSimetric_{n}\). Aleshores
-		\[n\divides\card{G}.\]
+		\[
+		    n\divides\card{G}.
+		\]
 		\begin{proof}
 			%TODO
 		\end{proof}
@@ -478,7 +540,9 @@
 	\begin{definition}[Grup de Galois d'un polinomi]
 		\labelname{grup de Galois d'un polinomi}\label{def:grup de Galois d'un polinomi}
 		Sigui~\(p(x)\in\KK[x]\) un polinomi amb cos de descomposició~\(\LL\). Aleshores definirem
-		\[\Gal(p(x))=\Gal(\LL\extensio\KK)\]
+		\[
+		    \Gal(p(x))=\Gal(\LL\extensio\KK)
+		\]
 		com el grup de Galois de~\(p(x)\).
 	\end{definition}
 	\begin{corollary}
@@ -492,9 +556,13 @@
 	\begin{definition}[Discriminant]
 		\labelname{discriminant}\label{def:discriminant}
 		Sigui~\(p(x)\in\KK[x]\) un polinomi sobre un cos~\(\KK\) amb cos de descomposició~\(\LL\) i arrels~\(\alpha_{1},\dots,\alpha_{n}\in\LL\). Aleshores definim
-		\[\discriminant(p(x))=\prod_{i<j}^{n}(\alpha_{i}-\alpha_{j})^{2}\]
+		\[
+		    \discriminant(p(x))=\prod_{i<j}^{n}(\alpha_{i}-\alpha_{j})^{2}
+		\]
 		com el discriminant de~\(p(x)\). També definim
-		\[\delta(p(x))=\prod_{i<j}^{n}(\alpha_{i}-\alpha_{j}).\]
+		\[
+		    \delta(p(x))=\prod_{i<j}^{n}(\alpha_{i}-\alpha_{j}).
+		\]
 	\end{definition}
 	\begin{observation}
 		\label{obs:discriminant}
@@ -514,7 +582,9 @@
 	\begin{lemma}
 		\label{lema:discriminant}
 		Siguin~\(p(x)\in\KK[x]\) un polinomi sobre un cos~\(\KK\) amb~\(n\) arrels i~\(\sigma\in\GrupSimetric_{n}\) una permutació. Aleshores
-		\[\prod_{i<j}^{n}(\alpha_{\sigma(i)}-\alpha_{\sigma(j)})=\sig(\sigma)\delta(p(x))\]
+		\[
+		    \prod_{i<j}^{n}(\alpha_{\sigma(i)}-\alpha_{\sigma(j)})=\sig(\sigma)\delta(p(x))
+		\]
 		\begin{proof}
 			%TODO
 		\end{proof}
@@ -523,7 +593,9 @@
 		\label{cor:l'arrel del discriminant d'un polinomi pertany al cos si i només si el grup de Galois del polinomi és un subgrup dels alternats de les arrels}
 		Siguin~\(p(x)\in\KK[x]\) un polinomi sense arrels múltiples sobre un cos~\(\KK\) amb~\(\ch(\KK)\neq2\), amb conjunt d'arrels~\(A=\{\alpha_{1},\dots,\alpha_{n}\}\) i sigui~\(\varphi\colon\Gal(p(x))\longrightarrow\GrupSimetric_{A}\) un epimorfisme de grups.
 		Aleshores
-		\[\varphi(\Gal(p(x))\subseteq\GrupAlternat(A)\Sii\delta(p(x))\in\KK.\]
+		\[
+		    \varphi(\Gal(p(x))\subseteq\GrupAlternat(A)\Sii\delta(p(x))\in\KK.
+		\]
 		\begin{proof}
 			Aquest enunciat té sentit pel \corollari~\myref{cor:grup de Galois d'una extensió amb un cos de descomposició}.
 			%TODO
@@ -606,7 +678,9 @@
 			\item Els elements~\(\alpha_{1},\dots,\alpha_{n}\) són separables sobre~\(\KK\).
 			\item L'element~\(\alpha_{1}\) és separable sobre~\(\KK\), i per a tot~\(i\in\{2,\dots,n\}\) l'element~\(\alpha_{i}\) és separable sobre~\(\KK(\alpha_{1},\dots,\alpha_{i-1})\).
 				\item Denotant~\(\LL=\KK(\alpha_{1},\dots,\alpha_{n})\) tenim que
-				\[\grauExtensio{\LL}{\KK}=\card{\{g\colon\LL\longrightarrow\KK\mid\left.g\right|_{\KK}=f\text{ i }g\text{ és un morfisme d'anells}\}}.\]
+				\[
+				    \grauExtensio{\LL}{\KK}=\card{\{g\colon\LL\longrightarrow\KK\mid\left.g\right|_{\KK}=f\text{ i }g\text{ és un morfisme d'anells}\}}.
+				\]
 		\end{enumerate}
 	\end{theorem}
 \section{El Teorema Fonamental de la Teoria de Galois}
@@ -618,7 +692,9 @@
 	\begin{theorem}[Teorema de les extensions de Galois]
 		\labelname{Teorema de les extensions de Galois}\label{thm:Teorema de les extensions de Galois}
 		Sigui~\(\FF\extensio\KK\) una extensió finita. Aleshores~\(\FF\extensio\KK\) és de Galois si i només si
-		\[\card{\Gal(\FF\extensio\KK)}=\grauExtensio{\FF}{\KK}.\]
+		\[
+		    \card{\Gal(\FF\extensio\KK)}=\grauExtensio{\FF}{\KK}.
+		\]
 		\begin{proof}
 			%TODO
 		\end{proof}
@@ -627,19 +703,25 @@
 	\begin{definition}[Reticle de subgrups]
 		\labelname{reticle de subgrups}\label{def:reticle de subgrups}
 		Sigui~\(G\) un grup. Aleshores definim
-		\[\ReticleGrup(G)=\{H\subseteq G\mid H\text{ és un subgrup de }G\}\]
+		\[
+		    \ReticleGrup(G)=\{H\subseteq G\mid H\text{ és un subgrup de }G\}
+		\]
 		com el reticle de subgrups de~\(G\).
 	\end{definition}
 	\begin{definition}[Reticle de subcossos]
 		\labelname{reticle de subcossos}\label{def:reticle de subcossos}
 		Sigui~\(\FF\extensio\KK\) una extensió de cossos. Aleshores definim
-		\[\ReticleCos(\FF\extensio\KK)=\{\EE\subseteq\FF\mid\EE\text{ és un cos i }\KK\subseteq\EE\}\]
+		\[
+		    \ReticleCos(\FF\extensio\KK)=\{\EE\subseteq\FF\mid\EE\text{ és un cos i }\KK\subseteq\EE\}
+		\]
 		com el reticle de subcossos de l'extensió~\(\FF\extensio\KK\).
 	\end{definition}
 	\begin{lemma}
 		\label{lema:cos fix}
 		Siguin~\(\FF\extensio\KK\) una extensió,~\(\EE\in\ReticleCos(\FF\extensio\KK)\) un subcòs i~\(H\in\ReticleGrup(\Gal(\FF\extensio\KK))\) un grup. Aleshores
-		\[\EE^{H}=\{a\in\EE\mid f(a)=a\text{ per a tot }f\in H\}\]
+		\[
+		    \EE^{H}=\{a\in\EE\mid f(a)=a\text{ per a tot }f\in H\}
+		\]
 		és un cos i satisfà~\(\KK\subseteq\EE^{H}\subseteq\FF\).
 		\begin{proof}
 			%TODO
@@ -648,7 +730,9 @@
 	\begin{definition}[Cos fix]
 		\labelname{cos fix}\label{def:cos fix}
 		Siguin~\(\FF\extensio\KK\) una extensió,~\(\EE\in\ReticleCos(\FF\extensio\KK)\) un subcòs i~\(H\in\ReticleGrup(\Gal(\FF\extensio\KK))\) un grup. Aleshores definim
-		\[\EE^{H}=\{a\in\EE\mid f(a)=a\text{ per a tot }f\in H\}\]
+		\[
+		    \EE^{H}=\{a\in\EE\mid f(a)=a\text{ per a tot }f\in H\}
+		\]
 		com el cos fix de~\(H\). % Té sentit pel lemma anterior
 	\end{definition}
 	\begin{proposition}
