--- a/body-matter/2n/metodes-numerics.tex
+++ b/body-matter/2n/metodes-numerics.tex
@@ -4,7 +4,8 @@
 \part{Mètodes numèrics}
 \chapter{Interpolació numèrica} % CRONOLOGIA INTERPOLACIÓ LINK https://imagescience.org/meijering/research/chronology/
 	% LINK https://en.wikibooks.org/wiki/Introduction_to_Numerical_Methods/Interpolation
-	Sovint podem mesurar un procés físic com un número de punts (per exemple, la temperatura d'una habitació en diferents instants de temps), però no tenim una expressió analítica per aquest procés que ens permeti calcular el seu valor en un punt arbitrari. L'interpolació ens proporciona un mètode simple per estimar aquesta expressió analítica en el rang dels punts mesurats\footnote{Si el punt que avaluem es troba fora del rang aquest problema s'anomena extrapolació i sol ser menys precís que la interpolació.}.
+	Sovint podem mesurar un procés físic com un número de punts (per exemple, la temperatura d'una habitació en diferents instants de temps), però no tenim una expressió analítica per aquest procés que ens permeti calcular el seu valor en un punt arbitrari.
+	L'interpolació ens proporciona un mètode simple per estimar aquesta expressió analítica en el rang dels punts mesurats\footnote{Si el punt que avaluem es troba fora del rang aquest problema s'anomena extrapolació i sol ser menys precís que la interpolació.}.
 	% Source: http://web.cs.iastate.edu/~cs577/handouts/interpolate.pdf
 \section{El problema d'interpolació}
 	\subsection{Problemes d'interpolació}
@@ -18,7 +19,8 @@
 		\[
 		    \Phi(x;a_{1},\dots,a_{n})\colon\mathbb{R}\longrightarrow\mathbb{R}
 		\]
-		una família de funcions que depenen dels paràmetres reals \(a_{0},\dots,a_{n}\), una família \(\{(x_{i},y_{i})\}_{i=0}^{n}\) de \(n\) punts. Direm que el problema d'interpolació de \(\{(x_{i},y_{i})\}_{i=0}^{n}\) per \(\Phi(x;a_{0},\dots,a_{n})\) consisteix a determinar \(a_{0},\dots,a_{n}\) tals que
+		una família de funcions que depenen dels paràmetres reals \(a_{0},\dots,a_{n}\), una família \(\{(x_{i},y_{i})\}_{i=0}^{n}\) de \(n\) punts.
+		Direm que el problema d'interpolació de \(\{(x_{i},y_{i})\}_{i=0}^{n}\) per \(\Phi(x;a_{0},\dots,a_{n})\) consisteix a determinar \(a_{0},\dots,a_{n}\) tals que
 		\[
 		    \Phi(x_{i};a_{0},\dots,a_{n})=y_{i}\quad\text{per a tot }i\in\{1,\dots,n\}.
 		\]
@@ -53,11 +55,13 @@
 	\subsection{Interpolació de Lagrange}
 	\begin{definition}[Problema d'interpolació de Lagrange]
 		\labelname{problema d'interpolació de Lagrange}\label{def:problema d'interpolació de Lagrange}
-		Sigui \(\{(x_{i},y_{i})\}_{i=0}^{n}\) un problema d'interpolació per \(P(x;a_{0},\dots,a_{n})\in\mathbb{R}_{n}[x]\) tal que \(x_{i}\neq x_{j}\) per a tot \(i,j\in\{0,\dots,n-1\}\), amb \(i\neq j\). Aleshores direm que el problema d'interpolació és un problema d'interpolació de Lagrange.
+		Sigui \(\{(x_{i},y_{i})\}_{i=0}^{n}\) un problema d'interpolació per \(P(x;a_{0},\dots,a_{n})\in\mathbb{R}_{n}[x]\) tal que \(x_{i}\neq x_{j}\) per a tot \(i,j\in\{0,\dots,n-1\}\), amb \(i\neq j\).
+		Aleshores direm que el problema d'interpolació és un problema d'interpolació de Lagrange.
 	\end{definition}
 	\begin{definition}[Polinomis bàsics de Lagrange]
 		\labelname{problema polinomis bàsics de Lagrange}\label{def:problema polinomis bàsics de Lagrange}
-		Sigui \(\{(x_{i},y_{i})\}_{i=0}^{n}\) un problema d'interpolació de Lagrange per \(P(x;a_{0},\dots,a_{n})\in\mathbb{R}_{n}[x]\) on, per a cert \(k\in\{0,\dots,n\}\) fix tenim que \(y_{k}=1\) i per a tot \(i\in I=\{0,\dots,k-1,k+1,\dots,n\}\) tenim \(y_{i}=0\). Aleshores direm que els polinomis
+		Sigui \(\{(x_{i},y_{i})\}_{i=0}^{n}\) un problema d'interpolació de Lagrange per \(P(x;a_{0},\dots,a_{n})\in\mathbb{R}_{n}[x]\) on, per a cert \(k\in\{0,\dots,n\}\) fix tenim que \(y_{k}=1\) i per a tot \(i\in I=\{0,\dots,k-1,k+1,\dots,n\}\) tenim \(y_{i}=0\).
+		Aleshores direm que els polinomis
 		\[
 		    L_{k}(x)=\prod_{i\in I}\frac{x-x_{i}}{x_{k}-x_{i}}=\frac{(x-x_{0})\cdots(x-x_{k-1})(x-x_{k+1})\cdots(x-x_{n})}{(x_{k}-x_{0})\cdots(x_{k}-x_{k-1})(x_{k}-x_{k+1})\cdots(x_{k}-x_{n})}
 		\]
@@ -70,7 +74,8 @@
 		\end{cases}\]
 	\end{observation}
 	\begin{proposition}\label{prop:unicitat interpolació de Lagrange}
-		Sigui \(\{(x_{i},y_{i})\}_{i=0}^{n}\) un problema d'interpolació de Lagrange per \(P(x)\). Aleshores la funció \(P(x)\) que satisfà
+		Sigui \(\{(x_{i},y_{i})\}_{i=0}^{n}\) un problema d'interpolació de Lagrange per \(P(x)\).
+		Aleshores la funció \(P(x)\) que satisfà
 		\[
 		    P(x_{i})=y_{i}
 		\]
@@ -84,11 +89,15 @@
 			\[
 			    P(x_{i})=Q(x_{i})=y_{i}
 			\]
-			per a tot \(i\in\{0,\dots,n\}\). Això és equivalent a que
+			per a tot \(i\in\{0,\dots,n\}\).
+			Això és equivalent a que
 			\[
 			    P(x_{i})-Q(x_{i})=0
 			\]
-			per a tot \(i\in\{0,\dots,n\}\). Ara bé, tenim que \(x_{0},\dots,x_{n}\) són arrels diferents de \(P(x)-Q(x)\) per la definició de \myref{def:problema d'interpolació de Lagrange}. Com que \(P(x)-Q(x)\in\mathbb{R}_{n+1}[x]\), aquests són els seus únics zeros, i pel Teorema Fonamental de l'Àlgebra tenim que ha de ser \(P(x)=Q(x)\). %REFERENCIES
+			per a tot \(i\in\{0,\dots,n\}\).
+			Ara bé, tenim que \(x_{0},\dots,x_{n}\) són arrels diferents de \(P(x)-Q(x)\) per la definició de \myref{def:problema d'interpolació de Lagrange}.
+			Com que \(P(x)-Q(x)\in\mathbb{R}_{n+1}[x]\), aquests són els seus únics zeros, i pel Teorema Fonamental de l'Àlgebra tenim que ha de ser \(P(x)=Q(x)\).
+			%REFERENCIES
 		\end{proof}
 	\end{proposition}
 	\begin{proposition}\label{prop:Algorisme de Neville}
@@ -105,12 +114,14 @@
 		    P_{i_{0},\dots,i_{k}}(x)=\frac{\left(x-x_{i_{0}}\right)P_{i_{1},\dots,i_{k}}(x)-\left(x-x_{i_{k}}\right)P_{i_{0},\dots,i_{k-1}}(x)}{x_{i_{k}}-x_{i_{0}}}.
 		\]
 		\begin{proof}
-			Fixem \(k=1\). Aleshores tenim
+			Fixem \(k=1\).
+			Aleshores tenim
 			\[
 			    P_{i}(x)=y_{i}.
 			\]
 			
-			Veiem la segona part. Definim 
+			Veiem la segona part.
+			Definim 
 			\[
 			    G(x)=\frac{\left(x-x_{i_{0}}\right)P_{i_{1},\dots,i_{k}}(x)-\left(x-x_{i_{k}}\right)P_{i_{0},\dots,i_{k-1}}(x)}{x_{i_{k}}-x_{i_{0}}}
 			\]
@@ -140,10 +151,12 @@
 		x_{2} & y_{2}=P_{2}(x) & & &\\
 		\vdots & \vdots & & &
 		\end{array}\]
-		que s'omple de columna a columna de dreta a esquerra. Es coneix com a algorisme de Neville.
+		que s'omple de columna a columna de dreta a esquerra.
+		Es coneix com a algorisme de Neville.
 	\end{observation}
 	\begin{example}\label{ex:Algorisme de Neville}
-		Sigui \(\{(0,1),(1,3),(3,2)\}\) un problema d'interpolació per \(P_{0,1,2}(x)\in\mathbb{R}_{2}[x]\). Volem avaluar el polinomi interpolador de Lagrange en \(x=2\), és a dir, volem trobar \(P_{0,1,2}(2)\).
+		Sigui \(\{(0,1),(1,3),(3,2)\}\) un problema d'interpolació per \(P_{0,1,2}(x)\in\mathbb{R}_{2}[x]\).
+		Volem avaluar el polinomi interpolador de Lagrange en \(x=2\), és a dir, volem trobar \(P_{0,1,2}(2)\).
 		\begin{solution}La taula de l'algoritme de Neville plantejada en l'observació \myref{obs:Algorisme de Neville} per aquest problema és
 			\[\begin{array}{c|ccc}
 			& k=0 & k=1 & k=2 \\\hline
@@ -160,7 +173,8 @@
 	El mètode de Neville és útil per avaluar un polinomi interpolador en un punt una vegada, però si es vol obtenir l'expressió general del polinomi interpolador per poder avaluar-lo múltiples vegades en diferents punts s'hauran d'emparar altres solucions.
 	\begin{definition}[Diferències dividides]
 		\labelname{diferències dividides}\label{def:diferències dividides}
-		Sigui \(P(x;a_{0},\dots,a_{n})\) el polinomi interpolador de Lagrange amb els punts de suport \(\{(x_{i},y_{i})\}_{i=0}^{n}\). Aleshores direm que
+		Sigui \(P(x;a_{0},\dots,a_{n})\) el polinomi interpolador de Lagrange amb els punts de suport \(\{(x_{i},y_{i})\}_{i=0}^{n}\).
+		Aleshores direm que
 		\[
 		    [x_{0},\dots,x_{k}]=a_{k}
 		\]
@@ -169,7 +183,8 @@
 		Aquesta definició té sentit per la proposició \myref{prop:unicitat interpolació de Lagrange}.
 	\end{definition}
 	\begin{proposition}\label{prop:Mètode diferències dividides}
-		Sigui \(\{(x_{i},y_{i})\}_{i=0}^{n}\) un problema d'interpolació de Lagrange per \(P(x)\). Aleshores
+		Sigui \(\{(x_{i},y_{i})\}_{i=0}^{n}\) un problema d'interpolació de Lagrange per \(P(x)\).
+		Aleshores
 		\begin{multline*}
 		P(x)=[x_{0}]+[x_{0},x_{1}](x-x_{0})+[x_{0},x_{1},x_{2}](x-x_{0})(x-x_{1})+\cdots\\\cdots+[x_{0},\dots,x_{n}](x-x_{0})\cdots(x-x_{n-1})=\sum_{i=0}^{n}\left([x_{0},\dots,x_{i}]\prod_{j=0}^{i-1}(x-x_{j})\right).
 		\end{multline*}
@@ -190,7 +205,8 @@
 			\[
 			    G_{k}(x)=a_{0}+a_{1}x+\dots+a_{k}x^{k}
 			\]
-			tenim que \(C_{k}=a_{k}\). Aleshores per la definició de \myref{def:diferències dividides} tenim que
+			tenim que \(C_{k}=a_{k}\).
+			Aleshores per la definició de \myref{def:diferències dividides} tenim que
 			\[
 			    G_{k}(x)=[x_{0},\dots,x_{k}](x-x_{0})\cdots(x-x_{k-1})
 			\]
@@ -211,16 +227,19 @@
 		\end{proof}
 	\end{proposition}
 	\begin{observation}\label{obs:mètode diferències dividides invariant per permutacions}
-		Sigui \(\{(x_{i},y_{i})\}_{i=0}^{n}\) un problema d'interpolació de Lagrange. Aleshores per a tot \(\sigma\in S_{4}\) tenim
+		Sigui \(\{(x_{i},y_{i})\}_{i=0}^{n}\) un problema d'interpolació de Lagrange.
+		Aleshores per a tot \(\sigma\in S_{4}\) tenim
 		\[
 		    [x_{0},\dots,x_{n}]=[x_{\sigma{0}},\dots,x_{\sigma(n)}].
 		\]
 		\begin{proof}
-			Per la proposició \myref{prop:unicitat interpolació de Lagrange}. %REFinar potser
+			Per la proposició \myref{prop:unicitat interpolació de Lagrange}.
+			%REFinar potser
 		\end{proof}
 	\end{observation}
 	\begin{proposition}\label{prop:algoritme diferències dividides de Newton}
-		Sigui \(\{(x_{i},y_{i})\}_{i=0}^{n}\) un problema d'interpolació de Lagrange per \(P(x)\). Aleshores
+		Sigui \(\{(x_{i},y_{i})\}_{i=0}^{n}\) un problema d'interpolació de Lagrange per \(P(x)\).
+		Aleshores
 		\begin{equation}\label{eq:prop:algoritme diferències dividides de Newton 1}
 		[x_{i}]=y_{i}\quad\text{per a tot }i\in\{0,\dots,n\}
 		\end{equation}
@@ -235,7 +254,8 @@
 			\[
 			    P_{0,\dots,n}(x)=\frac{\left(x-x_{0}\right)P_{1,\dots,n}(x)-\left(x-x_{n}\right)P_{0,\dots,n-1}(x)}{x_{n}-x_{0}},
 			\]
-			on \(P_{i_{1},\dots,i_{k}}(x)\) és el polinomi interpolador de Lagrange del problema interpolador del problema \(\{(x_{i},y_{i})\}_{i\in\{i_{1},\dots,i_{k}\}}\). Per tant per la proposició \myref{prop:Mètode diferències dividides} trobem %REVISAR? fa mandra
+			on \(P_{i_{1},\dots,i_{k}}(x)\) és el polinomi interpolador de Lagrange del problema interpolador del problema \(\{(x_{i},y_{i})\}_{i\in\{i_{1},\dots,i_{k}\}}\).
+			Per tant per la proposició \myref{prop:Mètode diferències dividides} trobem %REVISAR? fa mandra
 			\[
 			    [x_{0},\dots,x_{n}]=\frac{[x_{1},\dots,x_{n}]-[x_{0},\dots,x_{n-1}]}{x_{n}-x_{0}},
 			\]
@@ -282,13 +302,16 @@
 	%	\end{example}
 	\subsection{Error en la interpolació de Lagrange}
 	\begin{theorem}\label{thm:primera fita de l'error en la interpolació de Lagrange}
-		Siguin \(f\colon[a,b]\longrightarrow\mathbb{R}\) una funció de classe de diferenciabilitat \(\mathcal{C}^{n+1}\) i \(\{(x_{i},f(x_{i}))\}_{i=0}^{n}\) un problema d'interpolació de Lagrange per \(P(x)\) amb abscisses de suport que satisfan \(\{x_{i}\}_{i=0}^{n}\subset[a,b]\). Aleshores per a tot \(x\in[a,b]\) tenim
+		Siguin \(f\colon[a,b]\longrightarrow\mathbb{R}\) una funció de classe de diferenciabilitat \(\mathcal{C}^{n+1}\) i \(\{(x_{i},f(x_{i}))\}_{i=0}^{n}\) un problema d'interpolació de Lagrange per \(P(x)\) amb abscisses de suport que satisfan \(\{x_{i}\}_{i=0}^{n}\subset[a,b]\).
+		Aleshores per a tot \(x\in[a,b]\) tenim
 		\[
 		    f(x)-P(x)=\frac{f^{(n+1)}(\xi(x))}{(n+1)!}\omega(x),
 		\]
 		on \(\omega(x)=(x-x_{0})\cdots(x-x_{n})\), per a una certa funció \(\xi(x)\colon[a,b]\longrightarrow[c,d]\) amb \(c=\min\left\{\min_{i\in[0,n]}\{x_{i}\},x\right\}\) i \(d=\max\left\{\max_{i\in[0,n]}\{x_{i}\},x\right\}\).
 		\begin{proof}
-			Fixem \(x\in[a,b]\). Tenim \(f(x_{i})-P(x_{i})=0\) per a tot \(i\in\{0,\dots,n\}\). Si imposem \(x\notin\{x_{0},\dots,x_{n}\}\) i definim la funció
+			Fixem \(x\in[a,b]\).
+			Tenim \(f(x_{i})-P(x_{i})=0\) per a tot \(i\in\{0,\dots,n\}\).
+			Si imposem \(x\notin\{x_{0},\dots,x_{n}\}\) i definim la funció
 			\[
 			    F(z)=f(z)-P(z)-\omega(z)S(x)
 			\]
@@ -296,7 +319,8 @@
 			\begin{equation}\label{eq:thm:primera fita de l'error en la interpolació de Lagrange 1}
 			S(x)=\frac{f(x)-P(x)}{\omega(x)}.
 			\end{equation}
-			Observem que \(S(x)\) està ben definida pel Teorema Fonamental de l'Àlgebra. %REF
+			Observem que \(S(x)\) està ben definida pel Teorema Fonamental de l'Àlgebra.
+			%REF
 			
 			Observem també que
 			\[
@@ -308,7 +332,8 @@
 			\]
 			és a dir, \(F(z)\) existeixen \(\xi^{(0)}_{0},\dots,\xi^{(0)}_{n+1}\in[a,b]\) tals que \(F(\xi^{(0)}_{i})=0\) per a tot \(i\in\{0,\dots,n+1\}\) amb \(\xi^{(0)}_{i+1}>\xi^{(0)}_{i}\) per a tot \(i\in\{0,\dots,n\}\).
 			
-			Aplicant el \myref{thm:Teorema de Rolle} trobem que per a tot \(i\in\{1,\dots,n+1\}\) existeixen \(\{\xi^{(1)}_{i}\}_{i=1}^{n+1}\) tals que \(F'(\xi^{(1)}_{i})=0\) amb \(\xi^{(1)}_{i}\in(\xi^{(0)}_{i-1},\xi^{(0)}_{i})\). Iterant aquest argument trobem que per a \(k\in\{0,\dots,n+1\}\) tenim que per a tot \(i\in\{k,\dots,n+1\}\) existeixen \(\{\xi^{(k)}_{i}\}_{i=k}^{n+1}\) tals que \(F^{k}(\xi^{(k)}_{i})=0\) amb \(\xi^{(k)}_{i}\in(\xi^{(k-1)}_{i-1},\xi^{(k-1)}_{i})\); i per tant quan \(k=n+1\) tenim que existeix \(\xi^{(n+1)}_{n+1}\in(\xi^{(n)}_{n},\xi^{(n)}_{n+1})\) tal que \(F^{(n+1)}(\xi^{(n+1)}_{n+1})=0\) i trobem%
+			Aplicant el \myref{thm:Teorema de Rolle} trobem que per a tot \(i\in\{1,\dots,n+1\}\) existeixen \(\{\xi^{(1)}_{i}\}_{i=1}^{n+1}\) tals que \(F'(\xi^{(1)}_{i})=0\) amb \(\xi^{(1)}_{i}\in(\xi^{(0)}_{i-1},\xi^{(0)}_{i})\).
+			Iterant aquest argument trobem que per a \(k\in\{0,\dots,n+1\}\) tenim que per a tot \(i\in\{k,\dots,n+1\}\) existeixen \(\{\xi^{(k)}_{i}\}_{i=k}^{n+1}\) tals que \(F^{k}(\xi^{(k)}_{i})=0\) amb \(\xi^{(k)}_{i}\in(\xi^{(k-1)}_{i-1},\xi^{(k-1)}_{i})\); i per tant quan \(k=n+1\) tenim que existeix \(\xi^{(n+1)}_{n+1}\in(\xi^{(n)}_{n},\xi^{(n)}_{n+1})\) tal que \(F^{(n+1)}(\xi^{(n+1)}_{n+1})=0\) i trobem%
 				\begin{comment}
 					\marginpar{Dime si es verdad\\
 					Que alguien ha logrado escapar de esta tela de araña.\\
@@ -336,7 +361,8 @@
 		\]
 	\end{observation}
 	\begin{corollary}
-		Sigui \(\{(x_{i},f(x_{i}))\}_{i=0}^{n}\) un problema d'interpolació de Lagrange. Aleshores existeix un cert \(\xi\in[x_{0},x_{n}]\) tal que
+		Sigui \(\{(x_{i},f(x_{i}))\}_{i=0}^{n}\) un problema d'interpolació de Lagrange.
+		Aleshores existeix un cert \(\xi\in[x_{0},x_{n}]\) tal que
 		\[
 		    [x_{0},\dots,x_{n}]=\frac{f^{(n)}(\xi)}{n!}.
 		\]
@@ -348,9 +374,11 @@
 		x_{i} & 100 & 101 & 102 & 103\\
 		\log(x_{i}) & \log(100) & \log(101) & \log(102) & \log(103)
 		\end{array}\]
-		per \(P(x)\). Volem estimar l'error comés en calcular el valor de \(P(102.5)\).
+		per \(P(x)\).
+		Volem estimar l'error comés en calcular el valor de \(P(102.5)\).
 		\begin{solution}
-			Per la definició de \myref{def:problema d'interpolació de Lagrange} tenim que aquest problema d'interpolació és de Lagrange. Aleshores, pel Teorema \myref{thm:primera fita de l'error en la interpolació de Lagrange} tenim que
+			Per la definició de \myref{def:problema d'interpolació de Lagrange} tenim que aquest problema d'interpolació és de Lagrange.
+			Aleshores, pel Teorema \myref{thm:primera fita de l'error en la interpolació de Lagrange} tenim que
 			\[
 			    f(x)-P(x)=\frac{f^{(4)}(\xi(x))}{4!}\omega(x)
 			\]
@@ -362,7 +390,8 @@
 			\[
 			    \log(102.5)-P(102.5)=\frac{-1}{\xi^{4}(102.5)4}\frac{5}{2}\frac{3}{2}\frac{1}{2}\frac{-1}{2}
 			\]
-			amb \(\xi(102.5)\in[100,103]\), i per tant \(\frac{1}{103}\leq\frac{1}{\xi(102.5)}\leq\frac{1}{100}\). Aleshores tenim
+			amb \(\xi(102.5)\in[100,103]\), i per tant \(\frac{1}{103}\leq\frac{1}{\xi(102.5)}\leq\frac{1}{100}\).
+			Aleshores tenim
 			\[
 			    \abs{\log(102.5)-P(x)}=\frac{3\cdot5}{2^{4}\cdot\xi^{4}(102.5)}\leq\frac{15}{64}\frac{1}{100^{4}}\approx2.34\cdot10^{-9}.\qedhere
 			\]
@@ -384,12 +413,14 @@
 		\]
 	\end{definition}
 	\begin{theorem}\label{thm:diferències dividides en nodes equidistants}
-		Sigui \(\{(x_{i},f(x_{i}))\}_{i=0}^{n}\) un problema d'interpolació de Lagrange amb nodes equiespaiats. Aleshores, si \(h=\frac{x_{n}-x_{0}}{n}\) tenim
+		Sigui \(\{(x_{i},f(x_{i}))\}_{i=0}^{n}\) un problema d'interpolació de Lagrange amb nodes equiespaiats.
+		Aleshores, si \(h=\frac{x_{n}-x_{0}}{n}\) tenim
 		\[
 		    [x_{0},\dots,x_{n}]=\frac{\Delta^{n}f(x_{0})}{n!h^{n}}.
 		\]
 		\begin{proof}
-			Ho farem per inducció sobre \(n\). El cas \(n=1\) és cert, ja que
+			Ho farem per inducció sobre \(n\).
+			El cas \(n=1\) és cert, ja que
 			\begin{align*}
 			\Delta f(x_{0})&=f(x_{0}+h)-f(x_{0})\tag{\myref{def:nodes equiespaiats}}\\
 			&=f(x_{1})-f(x_{0})\\
@@ -401,7 +432,8 @@
 			[x_{0},x_{n}]=\frac{\Delta f(x_{0})}{h}.
 			\end{equation}
 			
-			Suposem ara que l'enunciat és cert per a \(k\) fix i demostrem-ho pel cas \(k+1\). Tenim que
+			Suposem ara que l'enunciat és cert per a \(k\) fix i demostrem-ho pel cas \(k+1\).
+			Tenim que
 			\begin{align*}
 			\Delta^{k+1}f(x_{0})&=\Delta(\Delta^{k}(f(x_{0}))\tag{\myref{def:nodes equiespaiats}}\\
 			&=\Delta^{k}f(x_{1})-\Delta^{k}f(x_{0})\tag{\myref{def:nodes equiespaiats}}\\
@@ -428,7 +460,8 @@
 		& \vdots\\
 		s_{n}(x) & \text{si }x\in[x_{n-1},x_{n}]
 		\end{cases}\]
-		amb \(s_{i}\in\mathbb{R}_{p}[x]\) per a tot \(i\in\{1,\dots,n\}\). Aleshores direm que \(s\) és un spline de grau \(p\) associat a \(\Delta\).
+		amb \(s_{i}\in\mathbb{R}_{p}[x]\) per a tot \(i\in\{1,\dots,n\}\).
+		Aleshores direm que \(s\) és un spline de grau \(p\) associat a \(\Delta\).
 		
 		Denotarem
 		\[
